tests/paczka1/fuzzy1/83678584.err
Error in line 2: FTR84fAQpjB S292 54,0
Error in line 1: 9kDkihvdkR S322 13,8
Error in line 8: LcMZjHnFPz S292 23,6
Error in line 18: R8ZPGW A382 91,14
